--- a/index.html
+++ b/index.html
@@ -2,12 +2,58 @@
 <html lang="en" >
 
 <head>
+  <style>
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#box1 {
+  height: 100vh;
+  width: 100%;
+  background-image: url(https://wallpaperscraft.com/image/bear_face_sad_eyes_predator_94721_1920x1080.jpg);
+  background-size: cover;
+  display: table;
+  background-attachment: fixed;
+  margin: 0px;
+}
+#box2 {
+  height: 100vh;
+  width: 100%;
+  background-image: url(https://wallpaperscraft.com/image/bear_grizzly_bear_eyes_nose_85885_1920x1080.jpg);
+  background-size: cover;
+  display: table;
+  background-attachment: fixed;
+}
+#box3 {
+  height: 100vh;
+  width: 100%;
+  background-image: url(https://wallpaperscraft.com/image/bear_field_grass_sky_968_1920x1200.jpg);
+  background-size: cover;
+  display: table;
+  background-attachment: fixed;
+}
+
+h1 {
+  color: white;
+  font-family: "Righteous", cursive;
+  opacity: .8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 120px;
+  margin: 0px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
+  </style>
   <meta charset="UTF-8">
   <title>Website Portfolio</title>
   
   
   
-      <link rel="stylesheet" href="/style.css">
+      
 
   
 </head>
